# HardWorkd

./: .gitignore  MainArc.drawio  README  README.md  TODO
cpp/: CMakeLists.txt  README  README.md
cpp/inc/: DatabaseService.h  StartWin.h  TableModel.h  WordInfo.h  mainwindow.h
cpp/inc/widgets/: GameSettingsWid.h  GameWid.h  LearnWordsWid.h  StartWid.h  UploadWid.h
cpp/src/: DatabaseService.cpp  StartWin.cpp  TableModel.cpp  main.cpp  mainwindow.cpp
cpp/src/widgets/: GameSettingsWid.cpp  GameWid.cpp  LearnWordsWid.cpp  StartWid.cpp  UploadWid.cpp
python/: tester.py
